--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- FontAwesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+  integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!-- Latest compiled JavaScript -->
+<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
@@ -11,21 +21,21 @@
 
     <div class="navbar-top">
         <div class="nav-brand">
-            <h1>Méline Pischedda</h1>
+            <h1><i class="fa-solid fa-mug-hot"></i> Méline Pischedda</h1>
         </div>
         <div class="nav-link">
             <a href="index.html">Home</a>
             <a href="#">Portfolio</a>
-            <a href="#">Profil</a>
+            <a href="profil.html">Profil</a>
         </div>
     </div>
 
     <header>
-        <a><h1>Projets 3D</h1></a>
-        <div class="divider-button"></div>
-        <a><h1 class="p">Projets Développement Web</h1></a>
-        <div class="divider-button"></div>
-        <a><h1>Projets Design d'espace</h1></a>
+        <!-- <a><h1>Projets 3D</h1></a>
+        <div class="divider-button"></div> -->
+        <a><h1 class="p">Portfolio</h1></a>
+        <!-- <div class="divider-button"></div>
+        <a><h1>Projets Design d'espace</h1></a> -->
     </header>
 
     <section class="projects-container">
@@ -44,15 +54,17 @@
     <section class="contact-section">
         <div>
             <h3 class="contact-titre">Contactez-moi</h3>
-            <p class="ontact-infos">meline.pischedda@gmail.com</p>
-            <p class="ontact-infos">06 23 36 90 92</p>
+            <p class="contact-infos">meline.pischedda@gmail.com</p>
+            <p class="contact-infos">06 23 36 90 92</p>
+            <p class="contact-infos">Aix-en-Provence</p>
         </div>
     </section>
 
     <footer>
-        copyright
+        Copyright © <span class="footer-year">2022</span> Méline Pischedda
     </footer>
 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
 
 </body>
