--- a/profil.html
+++ b/profil.html
@@ -87,7 +87,7 @@
           Pendant mon temps libre, j'aime beaucoup travailler sur des projets personnels et apprendre des langues étrangères.
           <br /> <br /> Si vous souhaitez en savoir plus sur mon parcours ou mes compétences, n'hésitez pas à jeter un œil à mon CV, mes 
           <span><a class="profil-footer-dev" href="projects.html"> projets en Développement Web</a></span> et mes 
-          <span><a class="profil-footer-3d" href="https://melinepischedda.wixsite.com/portfolio"> projets en 3D</a></span>, j'espère qu'il vous plaira !
+          <span><a class="profil-footer-3d" href="https://melinepischedda.wixsite.com/portfolio"> projets en 3D</a></span>, j'espère qu'ils vous plairont !
         </p>
 
     </div>
