--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +19,7 @@
 <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Méline Pischedda - Projets</title>
 </head>
 <body>
 
