--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <a href="projects.html">
                     <img 
                         src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" 
-                        alt="">
+                        alt="Web Development">
                     <h4>Développement Web</h4>
                     <p>Projets Front-End, Back-End et Full-Stack</p>
                 </a>
@@ -100,8 +100,8 @@
             <div class="container-item">
                 <a href="https://melinepischedda.wixsite.com/portfolio" target="_blank">
                     <img 
-                        src="https://scontent-mrs2-2.xx.fbcdn.net/v/t1.6435-9/120018768_10157227258165689_5630863612199507915_n.jpg?stp=dst-jpg_p526x296&_nc_cat=106&ccb=1-7&_nc_sid=730e14&_nc_ohc=3fisF2a7kNsAX_WExsR&_nc_ht=scontent-mrs2-2.xx&oh=00_AfDISlLaGWik5cocKj2tk2sAI0vbbgAC3uN66xI7nyZNjA&oe=63C20DCE" 
-                        alt="">
+                        src="img\rajah.jpg" 
+                        alt="Grooming">
                     <h4>Projets 3D</h4>
                     <p>Projets spécialisés en Grooming</p>
                 </a>
@@ -113,9 +113,18 @@
     <section class="contact-section">
         <div>
             <h3 class="contact-titre">Contactez-moi</h3>
+            <a href="https://www.linkedin.com/in/melinepischedda/" target="_blank" class="profile-link" >
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/meline-p" target="_blank" class="profile-link">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://www.instagram.com/melinepischedda/" target="_blank" class="profile-link">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
             <p class="contact-infos"><a href="mailto:meline.pischedda@gmail.com" >meline.pischedda@gmail.com</a></p>
             <p class="contact-infos"><a href="tel:0623369092">06 23 36 90 92</a></p>
-            <p class="contact-infos">Aix-en-Provence</p>
+            <p class="contact-infos">Les Pennes-Mirabeau</p>
         </div>
     </section>
 
