--- a/projects.html
+++ b/projects.html
@@ -76,9 +76,18 @@
     <section class="contact-section">
         <div>
             <h3 class="contact-titre">Contactez-moi</h3>
+            <a href="https://www.linkedin.com/in/melinepischedda/" target="_blank" class="profile-link" >
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/meline-p" target="_blank" class="profile-link">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://www.instagram.com/melinepischedda/" target="_blank" class="profile-link">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
             <p class="contact-infos"><a href="mailto:meline.pischedda@gmail.com" >meline.pischedda@gmail.com</a></p>
             <p class="contact-infos"><a href="tel:0623369092">06 23 36 90 92</a></p>
-            <p class="contact-infos">Aix-en-Provence</p>
+            <p class="contact-infos">Les Pennes-Mirabeau</p>
         </div>
     </section>
 
