--- a/profil.html
+++ b/profil.html
@@ -68,18 +68,18 @@
 
         <p class="profil-dev">
           <span>Profil Dev</span> <br />
-          J'ai toujours été intriguée par la programmation. J'ai eu l'occasion de découvrir les bases durant mes études, et, très curieuse, j'ai décidé de me former en autodidacte sur le métier de Developpeur Web. <br />
-          J'ai eu l'occasion de suivre des formations sur du front-end, mais également sur du back-end. Effectivement, les deux cotés sont intéressants.
-          <br /> Créative, le front-end me permet d'être capable d'exploiter et de créer les différents design qui m'interpellent.
-          De nature organisée, le back-end m'apporte la structure et la gestion des bases de données, sujets que je trouve très captivant.
+            J'ai toujours été intéressé par la programmation. J'ai eu l'occasion d'en découvrir les bases durant mes études, et, très curieuse, j'ai décidé de me former en tant que Développeur Web autodidacte. <br />
+            J'ai eu l'opportunité de suivre des formations sur le front-end, mais aussi sur le back-end. En effet, les deux côtés sont intéressants.
+            <br /> Créative, le front-end me permet d'utiliser et de créer les différents designs qui me plaisent.
+            De nature organisée, le back-end m'apporte la structuration et la gestion de bases de données, sujets que je trouve très captivants.
         </p>
         <p class="profil-3d">
           <span>Profil 3D</span> <br />
-          Grâce à ma formation à MoPA, j'ai eu l'opportunité de connaître tous les rôles qui font partie d'un film d'animation, en réalisant un film d'une minute en solo, et plusieurs films en équipe.
-          <br /> Je suis spécialisée en Grooming (cheveux, fourrure et plumes), mais je suis à l'aise avec tous les différents départements en image en 3D.
-          J'utilise principalement Maya, Houdini, Blender et 3DSMax.
-          <br /> Les connaissances acquises à Illumination McGuff en Grooming et en CFX ont été très bénéfiques et m'ont donné une réelle expérience dans la Production d'un film et les liens essentiels à connaître entre chaque départements.
-        </p>
+            Grâce à ma formation à MoPA, j'ai eu l'opportunité de connaître tous les rôles qui font partie d'un film d'animation, en réalisant un film solo d'une minute, et plusieurs films d'équipe.
+            <br /> Je suis spécialisée dans le Grooming (cheveux, poils et plumes), mais je suis à l'aise avec tous les différents départements en imagerie 3D.
+            J'utilise principalement Maya, Houdini, Blender et 3DSMax.
+            <br /> Les connaissances acquises chez <strong>Illumination McGuff</strong> en Grooming et CFX m'ont été très bénéfiques et m'ont apporté une réelle expérience dans la production d'un film et les liens indispensables à connaître entre chaque département.
+          </p>
 
         <p class="profil-footer">
           <!-- <hr /> -->
@@ -87,7 +87,7 @@
           Pendant mon temps libre, j'aime beaucoup travailler sur des projets personnels et apprendre des langues étrangères.
           <br /> <br /> Si vous souhaitez en savoir plus sur mon parcours ou mes compétences, n'hésitez pas à jeter un œil à mon CV, mes 
           <span><a class="profil-footer-dev" href="projects.html"> projets en Développement Web</a></span> et mes 
-          <span><a class="profil-footer-3d" href="https://melinepischedda.wixsite.com/portfolio"> projets en 3D</a></span>, j'espère qu'ils vous plairont !
+          <span><a class="profil-footer-3d" href="https://melinepischedda.wixsite.com/portfolio" target="_blank"> projets en 3D</a></span>, j'espère qu'ils vous plairont !
         </p>
 
     </div>
@@ -95,7 +95,7 @@
 
 
     <div class="download-cv">
-        <button><a href="MelinePischeddaCV.pdf" target="_blank">Télécharger le CV</a></button>
+        <button><a href="MelinePischeddaCV.pdf" target="_blank"><strong> Télécharger le CV</strong></a></button>
     </div>
 
       
@@ -103,9 +103,18 @@
     <section class="contact-section">
         <div>
             <h3 class="contact-titre">Contactez-moi</h3>
+            <a href="https://www.linkedin.com/in/melinepischedda/" target="_blank" class="profile-link" >
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/meline-p" target="_blank" class="profile-link">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://www.instagram.com/melinepischedda/" target="_blank" class="profile-link">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
             <p class="contact-infos"><a href="mailto:meline.pischedda@gmail.com" >meline.pischedda@gmail.com</a></p>
             <p class="contact-infos"><a href="tel:0623369092">06 23 36 90 92</a></p>
-            <p class="contact-infos">Aix-en-Provence</p>
+            <p class="contact-infos">Les Pennes-Mirabeau</p>
         </div>
     </section>
 
