--- a/projects.html
+++ b/projects.html
@@ -28,9 +28,9 @@
             <h1><i class="fa-solid fa-mug-hot"></i> Méline Pischedda</h1>
         </div>
             <div class="nav-link" id="main-nav">
-                <a href="index.html">Home</a>
-                <a href="projects.html">Portfolio</a>
-                <a href="profil.html">Profil</a>
+                <a href="index.html" class="nav-item nav-home">Home</a>
+                <a href="projects.html" class="nav-item nav-portfolio">Portfolio</a>
+                <a href="profil.html" class="nav-item nav-profil">Profil</a>
                 <a href="javascript:void(0);" class="icon" onclick="responsiveMainNav()">
                     <i class="fa fa-bars"></i>
                 </a>
@@ -62,7 +62,7 @@
 
     <section class="projects-container">
         <div class="projects-buttons">
-            <button onclick=spreadProjects() class="all-btn">All</button>
+            <button onclick=spreadProjects() class="all-btn button-active">All</button>
             <button onclick=handleClickFe() class="fe-btn">Front-End</button>
             <button onclick=handleClickBe() class="be-btn">Back-End</button> 
             <button onclick=handleClickFs() class="fs-btn">Full-Stack</button>        
