--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="container-profile">
                 <img 
                     class="profile-img-top" 
-                    src="https://media-exp1.licdn.com/dms/image/C4E03AQH6lmXBz0ktOQ/profile-displayphoto-shrink_200_200/0/1638373279287?e=1675900800&v=beta&t=hWwZjHtSs2_MEPP0_hVI8ubEUzdquoHqpFMS48EGf9Q" 
-                    alt="">
+                    src="img/profile-picture.jpg" 
+                    alt="profile-picture">
                 <h5 class="profile-title">Méline <br> Pischedda</h5>
             </div>
             <div class="container-presentation">
