--- a/profil.html
+++ b/profil.html
@@ -42,13 +42,13 @@
 
     <div class="container-link">
         <div class="container-link-item">
-            <a href="" target="_blank" class="profile-link">
+            <a href="https://www.linkedin.com/in/melinepischedda/" target="_blank" class="profile-link">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="" target="_blank"  class="profile-link">
+            <a href="https://github.com/meline-p" target="_blank"  class="profile-link">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="" target="_blank"  class="profile-link">
+            <a href="https://www.instagram.com/melinepischedda/" target="_blank"  class="profile-link">
                 <i class="fa-brands fa-instagram"></i>
             </a>
         </div>
@@ -88,7 +88,7 @@
           Pendant mon temps libre, j'aime beaucoup travailler sur des projets personnels et apprendre des langues étrangères.
           <br /> <br /> Si vous souhaitez en savoir plus sur mon parcours ou mes compétences, n'hésitez pas à jeter un œil à mon CV, mes 
           <span><a class="profil-footer-dev" href="projects.html"> projets en Développement Web</a></span> et mes 
-          <span><a class="profil-footer-3d" href="" target="_blank"> projets en 3D</a></span>, j'espère qu'ils vous plairont !
+          <span><a class="profil-footer-3d" href="https://melinepischedda.wixsite.com/portfolio" target="_blank"> projets en 3D</a></span>, j'espère qu'ils vous plairont !
         </p>
 
     </div>
@@ -104,13 +104,13 @@
     <section class="contact-section">
         <div>
             <h3 class="contact-titre">Contactez-moi</h3>
-            <a href="" target="_blank" class="profile-link" >
+            <a href="https://www.linkedin.com/in/melinepischedda/" target="_blank" class="profile-link" >
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="" target="_blank" class="profile-link">
+            <a href="https://github.com/meline-p" target="_blank" class="profile-link">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="" target="_blank" class="profile-link">
+            <a href="https://www.instagram.com/melinepischedda/" target="_blank" class="profile-link">
                 <i class="fa-brands fa-instagram"></i>
             </a>
             <p class="contact-infos"><a href="mailto:meline.pischedda@gmail.com" >meline.pischedda@gmail.com</a></p>
