--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
                 <div class="container-link">
                     <div class="container-link-item">
-                        <a href="" target="_blank" class="profile-link" >
+                        <a href="https://www.linkedin.com/in/melinepischedda/" target="_blank" class="profile-link" >
                             <i class="fa-brands fa-linkedin"></i>
                         </a>
-                        <a href="" target="_blank" class="profile-link">
+                        <a href="https://github.com/meline-p" target="_blank" class="profile-link">
                             <i class="fa-brands fa-github"></i>
                         </a>
-                        <a href="" target="_blank" class="profile-link">
+                        <a href="https://www.instagram.com/melinepischedda/" target="_blank" class="profile-link">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </div>
@@ -92,14 +92,14 @@
             <div class="container-item">
                 <a href="projects.html">
                     <img 
-                        src="" 
+                        src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" 
                         alt="Web Development">
                     <h4>Développement Web</h4>
                     <p>Projets Front-End, Back-End et Full-Stack</p>
                 </a>
             </div>
             <div class="container-item">
-                <a href="" target="_blank">
+                <a href="https://melinepischedda.wixsite.com/portfolio" target="_blank">
                     <img 
                         src="img\rajah.jpg" 
                         alt="Grooming">
@@ -114,13 +114,13 @@
     <section class="contact-section">
         <div>
             <h3 class="contact-titre">Contactez-moi</h3>
-            <a href="" target="_blank" class="profile-link" >
+            <a href="https://www.linkedin.com/in/melinepischedda/" target="_blank" class="profile-link" >
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="" target="_blank" class="profile-link">
+            <a href="https://github.com/meline-p" target="_blank" class="profile-link">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="" target="_blank" class="profile-link">
+            <a href="https://www.instagram.com/melinepischedda/" target="_blank" class="profile-link">
                 <i class="fa-brands fa-instagram"></i>
             </a>
             <p class="contact-infos"><a href="mailto:meline.pischedda@gmail.com" >meline.pischedda@gmail.com</a></p>
