--- a/projects.html
+++ b/projects.html
@@ -41,13 +41,13 @@
 
     <div class="container-link">
         <div class="container-link-item">
-            <a href="" target="_blank"  class="profile-link">
+            <a href="https://www.linkedin.com/in/melinepischedda/" target="_blank"  class="profile-link">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="" target="_blank"  class="profile-link">
+            <a href="https://github.com/meline-p" target="_blank"  class="profile-link">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="" target="_blank"  class="profile-link">
+            <a href="https://www.instagram.com/melinepischedda/" target="_blank"  class="profile-link">
                 <i class="fa-brands fa-instagram"></i>
             </a>
         </div>
@@ -77,13 +77,13 @@
     <section class="contact-section">
         <div>
             <h3 class="contact-titre">Contactez-moi</h3>
-            <a href="" target="_blank" class="profile-link" >
+            <a href="https://www.linkedin.com/in/melinepischedda/" target="_blank" class="profile-link" >
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="" target="_blank" class="profile-link">
+            <a href="https://github.com/meline-p" target="_blank" class="profile-link">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="" target="_blank" class="profile-link">
+            <a href="https://www.instagram.com/melinepischedda/" target="_blank" class="profile-link">
                 <i class="fa-brands fa-instagram"></i>
             </a>
             <p class="contact-infos"><a href="mailto:meline.pischedda@gmail.com" >meline.pischedda@gmail.com</a></p>
