Update SnowTricks, BileMo

--- a/profil.html
+++ b/profil.html
@@ -69,26 +69,27 @@
 
         <p class="profil-dev">
           <span>Profil Dev</span> <br />
-            J'ai toujours été intéressé par la programmation. J'ai eu l'occasion d'en découvrir les bases durant mes études, et, très curieuse, j'ai décidé de me former en tant que Développeur Web autodidacte. <br />
-            J'ai eu l'opportunité de suivre des formations sur le front-end, mais aussi sur le back-end. En effet, les deux côtés sont intéressants.
-            <br /> Créative, le front-end me permet d'utiliser et de créer les différents designs qui me plaisent.
-            De nature organisée, le back-end m'apporte la structuration et la gestion de bases de données, sujets que je trouve très captivants.
+          J'ai toujours été intriguée et captivée par la programmation, et j'en ai découvert les bases au cours de mes études. Poussée par ma curiosité, j'ai décidé de me former en tant que Développeuse Web autodidacte. <br />
+          J'ai exploré les domaines du front-end et du back-end, trouvant un intérêt particulier dans les deux aspects.
+            <br /> Le front-end nourrit ma créativité, me permettant de concevoir et de donner vie à des designs qui me plaisent.
+            Le back-end, en revanche, satisfait mon sens de l'organisation, en m'offrant l'occasion de structurer et de gérer des bases de données, un domaine que je trouve passionnant.
+            <br />Grâce à ma formation en alternance chez <a class="profil-footer-dev" href="https://openclassrooms.com/fr/" target="_blank"><strong>OpenClassrooms</strong></a>, au sein de l'entreprise <a class="profil-footer-dev" href="https://www.sfg.fr/accueil/" target="_blank"><strong>SFG</strong></a>, j'ai choisi de me spécialiser dans un diplôme de <strong>Développeur d'Application PHP Symfony</strong>. En près de deux ans avec eux, j'ai beaucoup progressé et acquis une solide expérience formatrice.
         </p>
         <p class="profil-3d">
           <span>Profil 3D</span> <br />
-            Grâce à ma formation à MoPA, j'ai eu l'opportunité de connaître tous les rôles qui font partie d'un film d'animation, en réalisant un film solo d'une minute, et plusieurs films d'équipe.
-            <br /> Je suis spécialisée dans le Grooming (cheveux, poils et plumes), mais je suis à l'aise avec tous les différents départements en imagerie 3D.
-            J'utilise principalement Maya, Houdini, Blender et 3DSMax.
-            <br /> Les connaissances acquises chez <strong>Illumination McGuff</strong> en Grooming et CFX m'ont été très bénéfiques et m'ont apporté une réelle expérience dans la production d'un film et les liens indispensables à connaître entre chaque département.
+          Grâce à ma formation à MoPA, j'ai eu l'opportunité de découvrir les divers métiers d'un film d'animation, en réalisant à la fois un film solo d'une minute et plusieurs projets en équipe.
+            <br /> Ma spécialité est le Grooming (cheveux, poils et plumes), mais j'ai de solides compétences dans tous les départements d'imagerie 3D.
+            J'utilise principalement Maya, Houdini, Blender, et 3DSMax.
+            <br /> Mon expérience chez <strong>Illumination McGuff</strong> en Grooming et CFX a été extrêmement enrichissante, m'offrant une vision approfondie de la production de films et de l'importance des interactions entre chaque département.
           </p>
 
         <p class="profil-footer">
           <!-- <hr /> -->
           <br />
-          Pendant mon temps libre, j'aime beaucoup travailler sur des projets personnels et apprendre des langues étrangères.
-          <br /> <br /> Si vous souhaitez en savoir plus sur mon parcours ou mes compétences, n'hésitez pas à jeter un œil à mon CV, mes 
+          Dans mon temps libre, j'aime travailler sur des projets personnels et apprendre des langues étrangères.
+          <br /> <br /> N'hésitez pas à consulter mon CV, ainsi que mes
           <span><a class="profil-footer-dev" href="projects.html"> projets en Développement Web</a></span> et mes 
-          <span><a class="profil-footer-3d" href="https://melinepischedda.wixsite.com/portfolio" target="_blank"> projets en 3D</a></span>, j'espère qu'ils vous plairont !
+          <span><a class="profil-footer-3d" href="https://melinepischedda.wixsite.com/portfolio" target="_blank"> projets en 3D</a></span> pour en savoir plus sur mon parcours et mes compétences. J'espère qu'ils vous plairont !
         </p>
 
     </div>
