Update new projects

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </a>
             <p class="contact-infos"><a href="mailto:meline.pischedda@gmail.com" >meline.pischedda@gmail.com</a></p>
             <p class="contact-infos"><a href="tel:0623369092">06 23 36 90 92</a></p>
-            <p class="contact-infos">Les Pennes-Mirabeau</p>
+            <p class="contact-infos">Aix-en-Provence</p>
         </div>
     </section>
 
