--- a/profil.html
+++ b/profil.html
@@ -62,7 +62,7 @@
                     Hello, je suis Méline, Développeuse Web et Artiste 3D.
                 </h2>
                 <p class="profil-intro">
-                Polyvalente, je suis diplômée en <span>Architecture d'intérieur</span>, en <span>Design Graphique</span> et en <span>Conception / Réalisation 3D</span>. <br />
+                Polyvalente, je suis diplômée en <span>Développement Web</span>, en <span>Architecture d'intérieur</span>, en <span>Design Graphique</span> et en <span>Conception / Réalisation 3D</span>. <br />
                 </p>
             </div>
         <div class="container-profil-body">
@@ -73,14 +73,14 @@
           J'ai exploré les domaines du front-end et du back-end, trouvant un intérêt particulier dans les deux aspects.
             <br /> Le front-end nourrit ma créativité, me permettant de concevoir et de donner vie à des designs qui me plaisent.
             Le back-end, en revanche, satisfait mon sens de l'organisation, en m'offrant l'occasion de structurer et de gérer des bases de données, un domaine que je trouve passionnant.
-            <br />Grâce à ma formation en alternance chez <a class="profil-footer-dev" href="https://openclassrooms.com/fr/" target="_blank"><strong>OpenClassrooms</strong></a>, au sein de l'entreprise <a class="profil-footer-dev" href="https://www.sfg.fr/accueil/" target="_blank"><strong>SFG</strong></a>, j'ai choisi de me spécialiser dans un diplôme de <strong>Développeur d'Application PHP Symfony</strong>. En près de deux ans avec eux, j'ai beaucoup progressé et acquis une solide expérience formatrice.
+            <br />Grâce à ma formation en alternance chez <a class="profil-footer-dev" href="https://openclassrooms.com/fr/" target="_blank"><strong>OpenClassrooms</strong></a>, au sein de l'entreprise <a class="profil-footer-dev" href="https://www.sfg.fr/accueil/" target="_blank"><strong>SFG</strong></a>, j'ai choisi de me spécialiser dans un diplôme de <strong>Développeur Concepteur Logiciel</strong>. Après plus de deux ans à leurs côtés, j'ai beaucoup progressé et acquis une solide expérience formatrice.
         </p>
         <p class="profil-3d">
           <span>Profil 3D</span> <br />
           Grâce à ma formation à MoPA, j'ai eu l'opportunité de découvrir les divers métiers d'un film d'animation, en réalisant à la fois un film solo d'une minute et plusieurs projets en équipe.
             <br /> Ma spécialité est le Grooming (cheveux, poils et plumes), mais j'ai de solides compétences dans tous les départements d'imagerie 3D.
             J'utilise principalement Maya, Houdini, Blender, et 3DSMax.
-            <br /> Mon expérience chez <strong>Illumination McGuff</strong> en Grooming et CFX a été extrêmement enrichissante, m'offrant une vision approfondie de la production de films et de l'importance des interactions entre chaque département.
+            <br /> Mon expérience chez <strong>Illumination McGuff</strong> sur le film <strong>Moi, Moche et Méchant 4</strong>, en Grooming et CFX a été extrêmement enrichissante, m'offrant une vision approfondie de la production de films et de l'importance des interactions entre chaque département.
           </p>
 
         <p class="profil-footer">
